Adding basic MVC for testing