@@ -1,107 +1,75 @@
 package com.mau.spring.config;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.MediaType;
-import org.springframework.http.converter.ByteArrayHttpMessageConverter;
-import org.springframework.http.converter.FormHttpMessageConverter;
 import org.springframework.http.converter.HttpMessageConverter;
-import org.springframework.http.converter.StringHttpMessageConverter;
 import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.http.converter.xml.MarshallingHttpMessageConverter;
-import org.springframework.http.converter.xml.SourceHttpMessageConverter;
 import org.springframework.oxm.Marshaller;
 import org.springframework.oxm.Unmarshaller;
-import org.springframework.stereotype.Controller;
 import org.springframework.web.servlet.RequestToViewNameTranslator;
 import org.springframework.web.servlet.ViewResolver;
 import org.springframework.web.servlet.config.annotation.ContentNegotiationConfigurer;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 import org.springframework.web.servlet.view.DefaultRequestToViewNameTranslator;
 import org.springframework.web.servlet.view.InternalResourceViewResolver;
 import org.springframework.web.servlet.view.JstlView;
 
-import javax.inject.Inject;
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebMvc
-//@ComponentScan(
-//        basePackages = "com.mau",
-//        useDefaultFilters = false,
-//        includeFilters = @ComponentScan.Filter(Controller.class)
-//)
-@ComponentScan(basePackages = "com.mau") // This is all you need now
-public class ServletContextConfiguration
-{
+@ComponentScan(basePackages = "com.mau")
+public class ServletContextConfiguration implements WebMvcConfigurer {
 
-    @Inject
-    ObjectMapper objectMapper;
-    @Inject
-    Marshaller marshaller;
-    @Inject
-    Unmarshaller unmarshaller;
+    private final ObjectMapper objectMapper;
+    private final Marshaller marshaller;
+    private final Unmarshaller unmarshaller;
 
-//    @Override
-    public void configureMessageConverters(
-            List<HttpMessageConverter<?>> converters
-    ) {
-        converters.add(new ByteArrayHttpMessageConverter());
-        converters.add(new StringHttpMessageConverter());
-        converters.add(new FormHttpMessageConverter());
-        converters.add(new SourceHttpMessageConverter<>());
+    @Autowired
+    public ServletContextConfiguration(ObjectMapper objectMapper, Marshaller marshaller, Unmarshaller unmarshaller) {
+        this.objectMapper = objectMapper;
+        this.marshaller = marshaller;
+        this.unmarshaller = unmarshaller;
+    }
 
-        MarshallingHttpMessageConverter xmlConverter =
-                new MarshallingHttpMessageConverter();
-        xmlConverter.setSupportedMediaTypes(Arrays.asList(
-                new MediaType("application", "xml"),
-                new MediaType("text", "xml")
-        ));
+    @Override
+    public void configureMessageConverters(List<HttpMessageConverter<?>> converters) {
+        converters.add(new MappingJackson2HttpMessageConverter(objectMapper));
+
+        MarshallingHttpMessageConverter xmlConverter = new MarshallingHttpMessageConverter();
+        xmlConverter.setSupportedMediaTypes(List.of(MediaType.APPLICATION_XML, MediaType.TEXT_XML));
         xmlConverter.setMarshaller(this.marshaller);
         xmlConverter.setUnmarshaller(this.unmarshaller);
         converters.add(xmlConverter);
-
-        MappingJackson2HttpMessageConverter jsonConverter =
-                new MappingJackson2HttpMessageConverter();
-        jsonConverter.setSupportedMediaTypes(Arrays.asList(
-                new MediaType("application", "json"),
-                new MediaType("text", "json")
-        ));
-        jsonConverter.setObjectMapper(this.objectMapper);
-        converters.add(jsonConverter);
     }
 
-//    @Override
-    public void configureContentNegotiation(
-            ContentNegotiationConfigurer configurer)
-    {
-        configurer.favorPathExtension(true).favorParameter(false)
-                .parameterName("mediaType").ignoreAcceptHeader(false)
-                .useJaf(false).defaultContentType(MediaType.APPLICATION_XML)
+    @Override
+    public void configureContentNegotiation(ContentNegotiationConfigurer configurer) {
+        configurer
+                .ignoreAcceptHeader(false) // Enable Accept header-based negotiation
+                .defaultContentType(MediaType.APPLICATION_JSON) // Default to JSON if no Accept header is provided
                 .mediaType("xml", MediaType.APPLICATION_XML)
                 .mediaType("json", MediaType.APPLICATION_JSON);
     }
 
+
     @Bean
-    public ViewResolver viewResolver()
-    {
-        InternalResourceViewResolver resolver =
-                new InternalResourceViewResolver();
+    public ViewResolver viewResolver() {
+        InternalResourceViewResolver resolver = new InternalResourceViewResolver();
         resolver.setViewClass(JstlView.class);
-//        resolver.setPrefix("/WEB-INF/jsp/view/");
         resolver.setPrefix("/WEB-INF/jsp/view/");
         resolver.setSuffix(".jsp");
         return resolver;
     }
 
     @Bean
-    public RequestToViewNameTranslator viewNameTranslator()
-    {
+    public RequestToViewNameTranslator viewNameTranslator() {
         return new DefaultRequestToViewNameTranslator();
     }
-
-
 }
